--- a/resources/language/resource.language.zh_cn/strings.po
+++ b/resources/language/resource.language.zh_cn/strings.po
@@ -888,8 +888,8 @@ msgid "Thank you"
 msgstr "谢谢您"
 
 msgctxt "#32318"
-msgid "Your @DISTRONAME@ installation is now complete and you are about to enter Kodi where you can set up your media libraries. Install Nextcloud/Zerotier One/Transmission Client on your PC or mobile.  For help with this, there is a guide available at wiki.kodi.tv[CR][CR]@DISTRONAME@ is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find @DISTRONAME@ useful we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using @DISTRONAME@ as much as we've enjoyed building it. If you need any more help, you can find links to our support forum along with latest news at our website."
-msgstr "您的 @DISTRONAME@ 安装完成，并且下一步将进入Kodi， 您可以设置您的媒体库。在PC或手机上安装Nextcloud、Zerotier One、TransmissionBT 的 客户端，以便访问。 在wiki.kodi.tv上有一个指南，由一组开发人员在业余时间制作的。即便是作为一个志愿者项目，我们依然还是需要支付我们的互联网带宽以及开发资源的费用，所以如果您觉得 @DISTRONAME@ 有用的话， 我们将很感谢您的任何数量的捐赠。最后，祝您使用 @DISTRONAME@ 快乐，就像我们建造它的快乐一样。如果需要什么帮助，您可以在我们的网站上最近的新闻中找到服务支持论坛的链接。"
+msgid "Your @DISTRONAME@ installation is about complete, except the host's certificate should be applying in background . If it applied success before you close the wizard , You will be notified by a window with QRCode for you to scan after you close this window, then you can link your mobile with the device (after you download nextcloud client on you mobile phone). If it is not applied success before you close the wizard , you can check it in Settings . If You are using the device in virtual machine (in vmplayer for example) , it's a good time to specify a folder to store the photos and videos from your mobile . After you specify the folder , if FunHomeTV can use it , you will be notified.  You are about to enter Kodi . Install Nextcloud/Zerotier One/Transmission Client on your PC or mobile.  For help with this, there is a guide available at wiki.kodi.tv[CR][CR]@DISTRONAME@ is developed by a dedicated team of developers who work purely in their spare time. Even as a volunteer project, we still have to pay for our internet bandwidth and development resources so if you find @DISTRONAME@ useful we will always appreciate a donation of any amount.[CR][CR]Finally, we hope you enjoy using @DISTRONAME@ as much as we've enjoyed building it. If you need any more help, you can find links to our support forum along with latest news at our website."
+msgstr "您的 @DISTRONAME@ 即将安装完成，除了本设备的网络证书正在后台申请过程中。如果能够在您关闭本向导窗口前完成证书申请，在您关闭本窗口后，您将会看到一个带有二维码的窗口，在您用手机下载Ｎｅｘｔｃｌｏｕｄ客户端后，就可以用它扫描窗口中的二维码，与本设备连接。如果不能在您关闭本向导窗口前完成证书申请，您可以在设置中检查，并实现连接。如果您在使用虚拟机（例如VMPlayer）,现在最好在虚拟机中指定一个共享的文件夹用于存放您手机上的照片和视频（通过虚拟机菜单操作），您指定文件夹以后，如果ＦｕｎＨｏｍｅＴＶ可以使用，　您将会收到通知。下一步将进入Kodi。在PC或手机上安装Nextcloud、Zerotier One、TransmissionBT 的 客户端，以便访问。 在wiki.kodi.tv上有一个指南，由一组开发人员在业余时间制作的。即便是作为一个志愿者项目，我们依然还是需要支付我们的互联网带宽以及开发资源的费用，所以如果您觉得 @DISTRONAME@ 有用的话， 我们将很感谢您的任何数量的捐赠。最后，祝您使用 @DISTRONAME@ 快乐，就像我们建造它的快乐一样。如果需要什么帮助，您可以在我们的网站上最近的新闻中找到服务支持论坛的链接。"
 
 msgctxt "#32319"
 msgid "Cron"
@@ -936,12 +936,12 @@ msgid "Connected: "
 msgstr "已连接： "
 
 msgctxt "#32334"
-msgid "Yes"
-msgstr "是"
+msgid "✔"
+msgstr "✔"
 
 msgctxt "#32335"
-msgid "No"
-msgstr "否"
+msgid "✘"
+msgstr "✘"
 
 msgctxt "#32338"
 msgid "No Bluetooth adapter found."
@@ -1388,20 +1388,20 @@ msgid "Check Update Now"
 msgstr "现在检查更新" 
 
 msgctxt "#32599"
-msgid "Please use your mobile phone nextcloud client to link the device."
-msgstr "请使用您的手机上Nextcloud客户端应用程序链接这个设备" 
+msgid "Please use your mobile phone nextcloud client to scan the QR code."
+msgstr "请使用您的手机上Nextcloud客户端应用程序扫描这个二维码" 
 
 msgctxt "#32598"
-msgid "the address is https://[hostname].funhome.tv ."
-msgstr "地址是　https://[主机名称].funhome.tv　。" 
+msgid "The default administrator username is 'nc', password is 'funhome.tv'."
+msgstr "本机上默认的管理员用户名称是'nc'，密码是'funhome.tv'。"  
 
 msgctxt "#32597"
-msgid "Please download from your mobile's appstore."
-msgstr "请从您的手机应用商店中下载。" 
+msgid "Please download Nextcloud app from your mobile's appstore. Should be free."
+msgstr "请从您的手机应用商店中下载'Nextcloud'应用程序。应该是免费且自由的软件。" 
 
 msgctxt "#32596"
-msgid "follow the app guide to procede."
-msgstr "按照应用的向导进行操作" 
+msgid "The entrance to scan the QR code is at lower part of your mobile screen, after you press 'Login' button."
+msgstr "扫描二维码的入口,在您打开Nextcloud应用,按下'登录'按钮后，在手机屏幕的中下方。" 
 
 msgctxt "#32595"
 msgid "Domain Name Service Registered :"
@@ -1455,4 +1455,10 @@ msgctxt "#36606"
 msgid "The certificate apply log file is not exist."
 msgstr "证书申请过程的日志文件不存在" 
 
+msgctxt "#36607"
+msgid "The TLS certificate apply successed"
+msgstr "TLS证书申请成功" 
 
+msgctxt "#36608"
+msgid "The shared folder is mounted"
+msgstr "共享文件夹挂载成功" 
